<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA生活网络版</string>
    <string name="title_activity_aalifenet">AA生活网络版</string>
    <string name="title_activity_itemlist">列表页</string>
    <string name="title_activity_add">添加页</string>
    <string name="title_activity_edit">修改页</string>
    <string name="title_activity_register">注册页</string>
    <string name="title_activity_userinfo">资料页</string>
    <string name="title_text_login">请登录系统</string>
    <string name="title_text_register">新用户注册</string>
    <string name="title_text_userinfo">用户资料</string>
    <string name="title_text_itemlist">每日消费</string>
    <string name="title_text_additem">添加消费</string>
    <string name="title_text_edititem">修改消费</string>
    <string name="label_username">用户名 ：</string>
    <string name="label_usernickname">昵　称 ：</string>
    <string name="label_userpass">密　码 ：</string>
    <string name="label_userimage">头　像 ：</string>
    <string name="label_useremail">邮　箱 ：</string>
    <string name="label_userphone">电　话 ：</string>
    <string name="label_usergroup">群　组 ：</string>
    <string name="label_joinusergroup">加入&#160;&#160;</string>
    <string name="label_categoryname">类　别：</string>
    <string name="label_itemname">名　称：</string>
    <string name="label_itemprice">价　格：</string>
    <string name="label_itembuydate">日　期：</string>
    <string name="btn_login">&#160;&#160;登录&#160;&#160;</string>
    <string name="btn_register">&#160;&#160;注册&#160;&#160;</string>
    <string name="btn_submitregister">提交注册</string>
    <string name="btn_submituserinfo">修改资料</string>
    <string name="btn_submitadd">确认添加</string>
    <string name="btn_submitedit">确认修改</string>
    <string name="btn_text_loading">加载中&#8230;</string>
    <string name="btn_text_logining">登录中&#8230;</string>
    <string name="btn_text_adding">添加中&#8230;</string>
    <string name="btn_text_editing">修改中&#8230;</string>
    <string name="btn_text_regising">注册中&#8230;</string>
    <string name="btn_symbol_left">&lt;</string>
    <string name="btn_symbol_right">&gt;</string>
    <string name="btn_symbol_premonth">&lt;&lt;</string>
    <string name="btn_symbol_nextmonth">&gt;&gt;</string>
    <string name="desc_add">添加</string>
    <string name="desc_edit">修改</string>
    <string name="desc_back">返回</string>
    <string name="desc_exit">退出</string>
    <string name="desc_user">用户</string>
    <string name="desc_group">群组</string>
    <string name="desc_web">网站</string>
    <string name="desc_image">头像</string>
    <string name="desc_cattype">类别</string>
    <string name="toast_loginerror">很抱歉，登录失败！</string>
    <string name="toast_loginok">登录成功。</string>
    <string name="toast_logingrouperror">群组未验证，不能登录！</string>
    <string name="toast_usernamenull">用户名未填写。</string>
    <string name="toast_userpassnull">密码未填写。</string>
    <string name="toast_contentnull">内容未填写。</string>
    <string name="toast_contenterror">内容不正确！</string>
    <string name="toast_adderror">添加出错了！</string>
    <string name="toast_editerror">修改出错了！</string>
    <string name="toast_editok">修改成功。</string>
    <string name="toast_registererror">注册失败！</string>
    <string name="toast_registerok">注册成功。</string>
    <string name="toast_changeok">更新成功。</string>
    <string name="toast_addok">添加成功。</string>
    <string name="toast_userrepeaterror">用户名重复！</string>
    <string name="toast_usergroupnull">群组不存在！</string>
    <string name="toast_deleteok">删除成功。</string>
    <string name="toast_interneterror">没有网络连接，应用将自动退出。</string>
    <string name="toast_downerror">下载失败。</string>
    <string name="text_empty">今日没有消费。</string>
    <string name="text_today">今日&#160;:&#160;</string>
    <string name="text_month">本月&#160;:&#160;</string>
    <string name="text_zero">￥ 0.0</string>
    <string name="txt_user">用户</string>
    <string name="txt_userid">用户ID</string>
    <string name="txt_groupid">群组</string>
    <string name="txt_month">本月</string>
    <string name="txt_today">今日</string>
    <string name="txt_users">所有用户</string>
    <string name="txt_date">日期</string>
    <string name="txt_cattypeid">类别ID</string>
    <string name="txt_itemid">商品ID</string>
    <string name="txt_cattypename">类别</string>
    <string name="txt_id">序号</string>
    <string name="txt_catname">名称</string>
    <string name="txt_username">消费者</string>
    <string name="txt_itemprice">价格</string>
    <string name="txt_newgroup">新建</string>
    <string name="txt_passgroup">通过</string>
    <string name="txt_cancelgroup">忽略</string>
    <string name="txt_cattypeupdate">更新</string>
    <string name="txt_cattypedelete">删除</string>
    <string name="txt_cattypeadd">添加</string>
    <string name="txt_cattypecancel">取消</string>
    <string name="txt_savegroup">保留数据</string>
    <string name="alert_title_usergroupedit">群组管理</string>
    <string name="alert_title_cattype">类别管理</string>
    <string name="alert_title_info">提示</string>
    <string name="alert_title_about">关于</string>
    <string name="alert_title_update">自动更新</string>
    <string name="alert_text_chooseoperater">请选择您的操作：</string>
    <string name="alert_text_about">AA生活网络版 v1.7.1\n\nAA生活记账，记录你和她（他）的每日生活消费。AA生活记账，在家上网记账，随身手机记账。\n\n作者：fxlmail@gmail.com\n官网：http://www.fxlweb.com</string>
    <string name="alert_text_downing">有新版本，下载中&#8230;&#8230;</string>
    <string name="alert_text_usergroupjoin">申请</string>
    <string name="alert_btn_close">关闭</string>
    <string name="alert_btn_edit">修改</string>
    <string name="alert_btn_delete">删除</string>

</resources>