<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/usernametext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/txt_user" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/alert_text_usergroupjoin" />

    <Button
        android:id="@+id/usergrouppassbtn"
        style="@style/MyButton"
        android:text="@string/txt_passgroup" />

    <Button
        android:id="@+id/usergroupcancelbtn"
        style="@style/MyButton"
        android:text="@string/txt_cancelgroup" />

</LinearLayout>